Dark mode and fix size issues

--- a/installer/src/main/resources/style.css
+++ b/installer/src/main/resources/style.css
@@ -4,9 +4,9 @@
 }
 
 .install-box.installed{
-    -fx-background-color: lightblue;
+    -fx-background-color: #006f00;
 }
 
 .install-box.error{
-    -fx-background-color: lightred;
+    -fx-background-color: #7b0000;
 }
